# pure_simd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
benchmark/: main.cpp  shader.cpp  simple_shader.cpp  simple_shader.hpp  sum.cpp
example/: shader.cpp  shader.hpp  simple_shader.cpp  sum.hpp
include/: pure_simd.hpp
scripts/: benchmark.sh  benchmark_shader.sh  benchmark_sum.sh  build.sh  clear.sh  config.sh  test.sh
src/: driver_config.hpp  main.cpp  shader.cpp
test/: array.cpp  shader.cpp  sum.cpp  test_array.cpp  test_simple_shader.cpp  test_tuple.cpp  vector.cpp
